test(token-validation-core): remove duplicate test